--- a/package.json
+++ b/package.json
@@ -221,8 +221,7 @@
     "source-map-support": "0.5.16",
     "spectron-fake-dialog": "0.0.1",
     "unorm": "1.6.0",
-    "validator": "12.2.0",
-    "wasm-loader": "^1.3.0"
+    "validator": "12.2.0"
   },
   "devEngines": {
     "node": ">=12.13.0",
