--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "yarn-lockfile": "1.1.1"
   },
   "dependencies": {
+    "@ledgerhq/hw-transport-node-hid": "5.15.0",
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "2.3.0",
@@ -177,6 +178,7 @@
     "cucumber-html-reporter": "5.1.0",
     "electron": "8.2.2",
     "electron-log-daedalus": "2.2.20",
+    "electron-rebuild": "^1.10.1",
     "electron-store": "5.1.1",
     "es6-error": "4.1.1",
     "form-data": "3.0.0",
