--- a/package.json
+++ b/package.json
@@ -163,6 +163,7 @@
     "yarn-lockfile": "1.1.1"
   },
   "dependencies": {
+    "@cardano-foundation/ledgerjs-hw-app-cardano": "^1.0.8",
     "@ledgerhq/hw-transport-node-hid": "5.15.0",
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
