add support for ff network

--- a/installer-clusters.cfg
+++ b/installer-clusters.cfg
@@ -1,1 +1,1 @@
-mainnet_flight selfnode testnet mainnet staging itn_selfnode itn_rewards_v1 qa nightly
+mainnet_flight ff selfnode testnet mainnet staging itn_selfnode itn_rewards_v1 qa nightly
