Shelley node integration WIP

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nix:qa": "NETWORK=qa nix-shell --argstr nodeImplementation jormungandr --argstr cluster qa",
     "nix:mainnet": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet",
     "nix:flight": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet_flight",
+    "nix:ff": "NETWORK=ff nix-shell --argstr nodeImplementation cardano --argstr cluster ff",
     "nix:selfnode": "NETWORK=selfnode nix-shell --argstr nodeImplementation cardano --argstr cluster selfnode",
     "nix:staging": "NETWORK=staging nix-shell --argstr nodeImplementation cardano --argstr cluster staging",
     "nix:testnet": "NETWORK=testnet nix-shell --argstr nodeImplementation cardano --argstr cluster testnet",
@@ -169,7 +170,7 @@
     "blakejs": "1.1.0",
     "bs58": "4.0.1",
     "cardano-js": "0.4.5",
-    "cardano-launcher": "0.20200414.1",
+    "cardano-launcher": "../cardano-launcher/",
     "check-disk-space": "2.1.0",
     "chroma-js": "2.1.0",
     "classnames": "2.2.6",
