Add network identifier for Shelley QA network

--- a/package.json
+++ b/package.json
@@ -50,8 +50,9 @@
     "nix:qa": "NETWORK=qa nix-shell --argstr nodeImplementation jormungandr --argstr cluster qa",
     "nix:mainnet": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet",
     "nix:flight": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet_flight",
-    "nix:ff": "NETWORK=ff nix-shell --argstr nodeImplementation cardano --argstr cluster ff",
     "nix:selfnode": "NETWORK=selfnode nix-shell --argstr nodeImplementation cardano --argstr cluster selfnode",
+    "nix:shelley_ff": "NETWORK=shelley_ff nix-shell --argstr nodeImplementation cardano --argstr cluster ff",
+    "nix:shelley_qa": "NETWORK=shelley_qa nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_qa",
     "nix:staging": "NETWORK=staging nix-shell --argstr nodeImplementation cardano --argstr cluster staging",
     "nix:testnet": "NETWORK=testnet nix-shell --argstr nodeImplementation cardano --argstr cluster testnet",
     "byron:wallet:importer": "node utils/api-importer/byron-wallet-importer.js",
