--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "bs58": "4.0.1",
     "cardano-js": "0.4.5",
     "cardano-launcher": "0.20200414.1",
+    "cbor": "^5.0.2",
     "check-disk-space": "2.1.0",
     "chroma-js": "2.1.0",
     "classnames": "2.2.6",
