--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "es6-error": "4.1.1",
     "form-data": "3.0.0",
     "fs-extra": "8.1.0",
+    "glob": "7.1.6",
     "graceful-fs": "4.2.3",
     "gulp": "4.0.0",
     "history": "4.10.1",
@@ -196,6 +197,7 @@
     "mobx-react-form": "2.0.8",
     "mobx-react-router": "4.1.0",
     "moment": "2.24.0",
+    "node-downloader-helper": "1.0.13",
     "pbkdf2": "3.0.17",
     "pdfkit": "0.8.3",
     "prop-types": "15.7.2",
