--- a/installer-clusters.cfg
+++ b/installer-clusters.cfg
@@ -1,1 +1,1 @@
-shelley_qa mainnet_flight ff selfnode testnet mainnet staging itn_selfnode itn_rewards_v1 qa nightly
+shelley_qa mainnet_flight shelley_testnet selfnode testnet mainnet staging itn_selfnode itn_rewards_v1 qa nightly
