--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "stylelint": "./node_modules/.bin/stylelint \"**/*.scss\"",
     "stylelint:fix": "yarn stylelint --fix",
     "manage:translations": "gulp purge:translations && gulp clear:cache && gulp build && node ./translations/translation-runner.js",
-    "storybook": "start-storybook -p 6006 -c storybook -s /",
+    "storybook": "start-storybook -p 6006 -c storybook --ci /",
     "storybook:build": "build-storybook -c storybook -o dist/storybook",
     "themes:check:createTheme": "gulp build:themes && node -r esm ./dist/scripts/check.js",
     "themes:update": "gulp build:themes && node -r esm ./dist/scripts/update.js && yarn prettier --loglevel warn --write source/renderer/app/themes/daedalus/*.js",
@@ -213,7 +213,7 @@
     "react-intl": "2.7.2",
     "react-lottie": "1.2.3",
     "react-markdown": "4.3.1",
-    "react-polymorph": "0.9.4-rc.7",
+    "react-polymorph": "0.9.4",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-svg-inline": "2.1.1",
