[DDW-283]: Implement slider component for Stake Pools screen

--- a/package.json
+++ b/package.json
@@ -204,6 +204,7 @@
     "ps-list": "7.0.0",
     "qr-image": "3.2.0",
     "qrcode.react": "1.0.0",
+    "rc-slider": "9.3.1",
     "react": "16.13.1",
     "react-animate-height": "2.0.20",
     "react-copy-to-clipboard": "5.0.2",
