switch darwin-launcher to go

--- a/installers/daedalus-installer.cabal
+++ b/installers/daedalus-installer.cabal
@@ -80,6 +80,7 @@ executable make-installer
 executable darwin-launcher
   main-is:             DarwinLauncher.hs
   default-language:    Haskell2010
+  buildable:           False
   build-depends:       base
                      , turtle
                      , unix
