--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "nix:flight": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet_flight",
     "nix:selfnode": "NETWORK=selfnode nix-shell --argstr nodeImplementation cardano --argstr cluster selfnode",
     "nix:shelley_local": "NETWORK=shelley_testnet nix-shell --arg configOverride state-cluster/config.json --arg genesisOverride state-cluster/keys/genesis.json --argstr nodeImplementation cardano --argstr cluster local --arg useLocalNode true",
-    "nix:shelley_testnet": "NETWORK=shelley_testnet nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_testnet",
+    "nix:shelley_testnet": "NETWORK=shelley_testnet_v2 nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_testnet_v2",
     "nix:shelley_qa": "NETWORK=shelley_qa nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_qa",
     "nix:staging": "NETWORK=staging nix-shell --argstr nodeImplementation cardano --argstr cluster staging",
     "nix:testnet": "NETWORK=testnet nix-shell --argstr nodeImplementation cardano --argstr cluster testnet",
