--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "create-news-verification-hashes": "node utils/create-news-verification-hashes/index.js",
     "lockfile:check": "node utils/lockfile-checker/index.js --check",
     "lockfile:fix": "node utils/lockfile-checker/index.js --fix",
-    "postinstall": "electron-rebuild"
+    "rebuild": "yarn electron-rebuild",
+    "postinstall": "./node_modules/.bin/electron-rebuild"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -161,7 +162,8 @@
     "webpack-stream": "5.2.1",
     "ws": "7.2.3",
     "yamljs": "0.3.0",
-    "yarn-lockfile": "1.1.1"
+    "yarn-lockfile": "1.1.1",
+    "electron-rebuild": "1.11.0"
   },
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "1.0.8",
@@ -181,7 +183,6 @@
     "cucumber-html-reporter": "5.1.0",
     "electron": "8.2.2",
     "electron-log-daedalus": "2.2.20",
-    "electron-rebuild": "1.10.1",
     "electron-store": "5.1.1",
     "es6-error": "4.1.1",
     "form-data": "3.0.0",
@@ -227,7 +228,7 @@
     "semver": "7.1.3",
     "source-map-support": "0.5.16",
     "spectron-fake-dialog": "0.0.1",
-    "trezor-connect": "8.1.5-extended",
+    "trezor-connect": "8.1.7-extended",
     "unorm": "1.6.0",
     "validator": "12.2.0"
   },
