--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "nix:flight": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet_flight",
     "nix:selfnode": "NETWORK=selfnode nix-shell --argstr nodeImplementation cardano --argstr cluster selfnode",
     "nix:shelley_local": "NETWORK=shelley_testnet nix-shell --arg configOverride state-cluster/config.json --arg genesisOverride state-cluster/keys/genesis.json --argstr nodeImplementation cardano --argstr cluster local --arg useLocalNode true",
-    "nix:shelley_testnet": "NETWORK=shelley_testnet nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_testnet",
+    "nix:shelley_testnet": "NETWORK=shelley_testnet nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_testnet --arg useLocalNode true",
     "nix:shelley_qa": "NETWORK=shelley_qa nix-shell --argstr nodeImplementation cardano --argstr cluster shelley_qa",
     "nix:staging": "NETWORK=staging nix-shell --argstr nodeImplementation cardano --argstr cluster staging",
     "nix:testnet": "NETWORK=testnet nix-shell --argstr nodeImplementation cardano --argstr cluster testnet",
@@ -206,12 +206,14 @@
     "ps-list": "7.0.0",
     "qr-image": "3.2.0",
     "qrcode.react": "1.0.0",
+    "rc-slider": "9.3.1",
     "react": "16.13.1",
     "react-animate-height": "2.0.20",
     "react-copy-to-clipboard": "5.0.2",
     "react-custom-scrollbars": "4.2.1",
     "react-datetime": "2.16.3",
     "react-dom": "16.13.1",
+    "react-flip-move": "3.0.4",
     "react-intl": "2.7.2",
     "react-lottie": "1.2.3",
     "react-markdown": "4.3.1",
