--- a/installer-clusters.cfg
+++ b/installer-clusters.cfg
@@ -1,1 +1,1 @@
-shelley_testnet_v6 shelley_qa mainnet_flight selfnode testnet mainnet staging itn_selfnode itn_rewards_v1 qa nightly
+shelley_testnet_v6 shelley_qa mainnet_flight testnet mainnet staging
