fix build order

--- a/installer-clusters.cfg
+++ b/installer-clusters.cfg
@@ -1,1 +1,1 @@
-shelley_testnet_v6 shelley_qa mainnet_flight testnet mainnet staging
+mainnet mainnet_flight testnet shelley_testnet_v6 shelley_qa staging
