--- a/package.json
+++ b/package.json
@@ -228,6 +228,7 @@
     "rust-cardano-crypto": "0.2.0",
     "safe-buffer": "5.2.0",
     "semver": "7.1.3",
+    "shasum": "^1.0.2",
     "source-map-support": "0.5.16",
     "spectron-fake-dialog": "0.0.1",
     "unorm": "1.6.0",
