--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "mobx-react-router": "4.1.0",
     "moment": "2.24.0",
     "node-downloader-helper": "1.0.13",
+    "omit-deep-lodash": "1.1.4",
     "pbkdf2": "3.0.17",
     "pdfkit": "0.8.3",
     "prop-types": "15.7.2",
@@ -223,6 +224,7 @@
     "react-svg-inline": "2.1.1",
     "react-virtualized": "9.21.2",
     "recharts": "1.8.5",
+    "rimraf": "3.0.2",
     "rotating-file-stream": "1.4.6",
     "route-parser": "0.0.5",
     "rust-cardano-crypto": "0.2.0",
