--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "2.0.1",
     "@ledgerhq/hw-transport-node-hid": "5.22.0",
+    "@emurgo/cardano-serialization-lib-nodejs": "3.0.0",
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "2.3.0",
