[DDW-197] Ledger TX send with faked data

--- a/package.json
+++ b/package.json
@@ -170,13 +170,15 @@
   },
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "2.0.1",
-    "@ledgerhq/hw-transport-node-hid": "5.22.0",
     "@emurgo/cardano-serialization-lib-nodejs": "3.0.0",
+    "@ledgerhq/hw-transport-node-hid": "5.22.0",
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "2.3.0",
     "blakejs": "1.1.0",
+    "borc": "^2.1.2",
     "bs58": "4.0.1",
+    "cardano-crypto.js": "^5.3.6-rc.6",
     "cardano-js": "0.4.5",
     "cardano-launcher": "0.20200813.0",
     "cbor": "5.0.2",
