--- a/package.json
+++ b/package.json
@@ -174,6 +174,7 @@
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "2.3.0",
+    "blake2b": "^2.1.3",
     "blakejs": "1.1.0",
     "borc": "^2.1.2",
     "bs58": "4.0.1",
