--- a/.babelrc
+++ b/.babelrc
@@ -7,6 +7,12 @@
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
     ["@babel/plugin-proposal-class-properties", { "loose": true }],
+    [
+      "@babel/plugin-proposal-private-methods",
+      {
+        "loose": true
+      }
+    ],
     ["@babel/plugin-proposal-object-rest-spread", {}],
     ["@babel/plugin-transform-runtime", {}],
     ["@babel/plugin-proposal-unicode-property-regex", { "useUnicodeFlag": false }],
