--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "storybook:build": "build-storybook -c storybook -o dist/storybook",
     "themes:check:createTheme": "gulp build:themes && node -r esm ./dist/scripts/check.js",
     "themes:update": "gulp build:themes && node -r esm ./dist/scripts/update.js && yarn prettier --loglevel warn --write source/renderer/app/themes/daedalus/*.js",
+    "themes:copy": "node -r @babel/register -r @babel/polyfill source/renderer/app/themes/utils/copyFunctions.js",
     "clear:cache": "gulp clear:cache",
     "nix:itn": "NETWORK=itn_rewards_v1 nix-shell --argstr nodeImplementation jormungandr --argstr cluster itn_rewards_v1",
     "nix:itn_selfnode": "NETWORK=itn_selfnode nix-shell --argstr nodeImplementation jormungandr --argstr cluster itn_selfnode",
@@ -177,6 +178,7 @@
     "check-disk-space": "2.1.0",
     "chroma-js": "2.1.0",
     "classnames": "2.2.6",
+    "commander": "^6.1.0",
     "csv-stringify": "5.3.6",
     "cucumber-html-reporter": "5.1.0",
     "electron": "8.2.2",
@@ -190,6 +192,7 @@
     "gulp": "4.0.0",
     "history": "4.10.1",
     "humanize-duration": "3.22.0",
+    "inquirer": "^7.3.3",
     "lodash": "4.17.15",
     "lodash-es": "4.17.15",
     "mime-types": "2.1.26",
