--- a/package.json
+++ b/package.json
@@ -257,6 +257,7 @@
     "**/**/lodash": "^4.17.20",
     "**/**/yargs-parser": "^20.2.0",
     "**/**/braces": "^2.3.1",
-    "**/**/node-fetch": "^2.6.1"
+    "**/**/node-fetch": "^2.6.1",
+    "**/**/mobx-react-lite": "2.2.2"
   }
 }
