--- a/package.json
+++ b/package.json
@@ -174,7 +174,7 @@
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "2.3.0",
-    "blake2b": "^2.1.3",
+    "blake2b": "2.1.3",
     "blakejs": "1.1.0",
     "borc": "^2.1.2",
     "bs58": "4.0.1",
@@ -240,7 +240,7 @@
     "shasum": "1.0.2",
     "source-map-support": "0.5.19",
     "spectron-fake-dialog": "0.0.1",
-    "trezor-connect": "8.1.14-extended",
+    "trezor-connect": "8.1.15-extended",
     "unorm": "1.6.0",
     "validator": "13.1.17"
   },
