--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "daedalus",
   "productName": "Daedalus",
-  "version": "2.3.0",
+  "version": "1.0.0-CT",
   "description": "Cryptocurrency Wallet",
   "main": "./dist/main/index.js",
   "scripts": {
@@ -49,6 +49,7 @@
     "nix:nightly": "NETWORK=nightly nix-shell --argstr nodeImplementation jormungandr --argstr cluster nightly",
     "nix:qa": "NETWORK=qa nix-shell --argstr nodeImplementation jormungandr --argstr cluster qa",
     "nix:mainnet": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet",
+    "nix:catalyst": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet_catalyst",
     "nix:flight": "NETWORK=mainnet nix-shell --argstr nodeImplementation cardano --argstr cluster mainnet_flight",
     "nix:selfnode": "NETWORK=selfnode nix-shell --argstr nodeImplementation cardano --argstr cluster selfnode",
     "nix:shelley_local": "NETWORK=shelley_testnet nix-shell --arg configOverride state-cluster/config.json --arg genesisOverride state-cluster/keys/genesis.json --argstr nodeImplementation cardano --argstr cluster local --arg useLocalNode true",
