--- a/package.json
+++ b/package.json
@@ -217,7 +217,7 @@
     "react-intl": "2.7.2",
     "react-lottie": "1.2.3",
     "react-markdown": "4.3.1",
-    "react-polymorph": "0.9.4",
+    "react-polymorph": "0.9.6-rc.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-svg-inline": "2.1.1",
