[DDW-197] Avoid rebuilding electron on CI

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./dist/main/index.js",
   "scripts": {
     "build": "gulp build",
+    "build:electron": "if ! [ -n \"$CI\" ]; then electron-rebuild -f -w usb; fi",
     "check:all": "yarn prettier:check && yarn lint && yarn flow:test && yarn stylelint && yarn lockfile:check && yarn manage:translations",
     "start": "gulp start",
     "start:dev": "NODE_ENV=development gulp start",
@@ -65,7 +66,7 @@
     "create-news-verification-hashes": "node utils/create-news-verification-hashes/index.js",
     "lockfile:check": "node utils/lockfile-checker/index.js --check",
     "lockfile:fix": "node utils/lockfile-checker/index.js --fix",
-    "postinstall": "electron-rebuild -f -w usb"
+    "postinstall": "yarn build:electron"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
