--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "create-news-verification-hashes": "node utils/create-news-verification-hashes/index.js",
     "lockfile:check": "node utils/lockfile-checker/index.js --check",
     "lockfile:fix": "node utils/lockfile-checker/index.js --fix",
-    "postinstall": "node scripts/npm-postinstall.js"
+    "postinstall": "yarn build:electron"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -171,7 +171,6 @@
   },
   "dependencies": {
     "@cardano-foundation/ledgerjs-hw-app-cardano": "2.0.1",
-    "@ledgerhq/hw-transport-node-hid": "5.26.0",
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "2.3.0",
@@ -244,6 +243,9 @@
     "trezor-connect": "8.1.16-extended",
     "unorm": "1.6.0",
     "validator": "13.1.17"
+  },
+  "optionalDependencies": {
+    "@ledgerhq/hw-transport-node-hid": "5.26.0"
   },
   "devEngines": {
     "node": ">=12.13.0",
