Add wallet-js package from npm

--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "yarn-lockfile": "1.1.1"
   },
   "dependencies": {
+    "@iohk-jormungandr/wallet-js": "0.5.0-pre7",
     "aes-js": "3.1.2",
     "bignumber.js": "5.0.0",
     "bip39": "3.0.2",
@@ -234,8 +235,7 @@
     "source-map-support": "0.5.19",
     "spectron-fake-dialog": "0.0.1",
     "unorm": "1.6.0",
-    "validator": "13.1.17",
-    "wallet-js": "https://github.com/input-output-hk/chain-wallet-libs/releases/download/v0.5.0-pre4/chain-wallet-libs-v0.5.0-pre4-bundler.tgz"
+    "validator": "13.1.17"
   },
   "devEngines": {
     "node": ">=12.13.0",
