[DDW-391] Receive screen with address sharing functionality (#2245)
* [DDW-391] [DDW-391] Receive screen with address sharing functionality

* [DDW-391] PDF download notification

* [DDW-391] Styling and adjustments

* [DDW-391] PDF custom name and filename sanitization

* [DDW-391] Translation manager

* [DDW-391] Flow issues

* [DDW-391] Share on clicking the row

* [DDW-391] Save QR code image

* [DDW-391] Set fixed version

* [DDW-391] Missing Japanese translation

* [DDW-391] Styling adjustment

* [DDW-391] Remove PDF footer for mainnet

* [DDW-391] Translation manager

* [DDW-391] Flow error

* [DDW-391] Fix CI builds

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/package.json
+++ b/package.json
@@ -230,6 +230,7 @@
     "route-parser": "0.0.5",
     "rust-cardano-crypto": "0.2.0",
     "safe-buffer": "5.2.1",
+    "sanitize-filename": "1.6.3",
     "semver": "7.3.2",
     "shasum": "1.0.2",
     "source-map-support": "0.5.19",
