--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,8 @@
     "import/prefer-default-export": 0,
     "jsx-a11y/anchor-is-valid": 0,
     "jsx-a11y/control-has-associated-label": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
     "max-classes-per-file": 0,
     "no-async-promise-executor": 0,
     "no-await-in-loop": 0,
