--- a/package.json
+++ b/package.json
@@ -273,6 +273,7 @@
     "**/**/yargs-parser": "^20.2.0",
     "**/**/braces": "^2.3.1",
     "**/**/node-fetch": "^2.6.1",
-    "**/**/mobx-react-lite": "2.2.2"
+    "**/**/mobx-react-lite": "2.2.2",
+    "**/**/ini": "^1.3.8"
   }
 }
