--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "regenerator-runtime": "0.13.7",
     "resolve-url": "0.2.1",
     "sass-loader": "7.1.0",
+    "sinon": "9.2.2",
     "spawn-sync": "2.0.0",
     "spectron": "10.0.1",
     "style-loader": "0.23.1",
