[DDW-497] Improve Mnemonic Phrase Input UX (#2280)
* [DDW-497] Improve mnemonic phrase input ux

* [DDW-497] Add changelog entry

* [DDW-497] Cleanup leftovers

* [DDW-497] Setup English translations

* [DDW-497] Add Japanese translations

* [DDW-497] Introduce improved mnemonics validation

* [DDW-497] Refactor mnemonics validation everywhere

* [DDW-497] Support pluralization for mnemonic info

* [DDW-497] Fix English pluralization

* [DDW-497] Fix required mnemonics label style issues

* [DDW-497] Fixes yarn.lock

Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "regenerator-runtime": "0.13.7",
     "resolve-url": "0.2.1",
     "sass-loader": "7.1.0",
+    "sinon": "9.2.2",
     "spawn-sync": "2.0.0",
     "spectron": "10.0.1",
     "style-loader": "0.23.1",
@@ -227,7 +228,7 @@
     "react-intl": "2.7.2",
     "react-lottie": "1.2.3",
     "react-markdown": "4.3.1",
-    "react-polymorph": "0.9.7-rc.6",
+    "react-polymorph": "0.9.7-rc.10",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-svg-inline": "2.1.1",
