[DDW-563] Import TS

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react",
-    "@babel/preset-flow"
+    "@babel/preset-flow",
+    "@babel/preset-typescript"
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
@@ -14,6 +15,7 @@
       }
     ],
     ["@babel/plugin-proposal-object-rest-spread", {}],
+    ["@babel/plugin-transform-flow-strip-types", {}],
     ["@babel/plugin-transform-runtime", {}],
     ["@babel/plugin-proposal-unicode-property-regex", { "useUnicodeFlag": false }],
     ["react-intl", {
