--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,7 @@
   "presets": [
     "@babel/preset-env",
     "@babel/preset-react",
-    "@babel/preset-flow",
-    "@babel/preset-typescript"
+    "@babel/preset-flow"
   ],
   "plugins": [
     ["@babel/plugin-proposal-decorators", { "legacy": true }],
@@ -15,7 +14,6 @@
       }
     ],
     ["@babel/plugin-proposal-object-rest-spread", {}],
-    ["@babel/plugin-transform-flow-strip-types", {}],
     ["@babel/plugin-transform-runtime", {}],
     ["@babel/plugin-proposal-unicode-property-regex", { "useUnicodeFlag": false }],
     ["react-intl", {
