--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "daedalus",
   "productName": "Daedalus",
-  "version": "3.0.0",
+  "version": "4.0.2-FC3",
   "description": "Cryptocurrency Wallet",
   "main": "./dist/main/index.js",
   "scripts": {
@@ -93,7 +93,7 @@
     "@storybook/react": "5.3.14",
     "asar": "2.1.0",
     "autodll-webpack-plugin": "0.4.2",
-    "axios": "0.20.0",
+    "axios": "0.21.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.0.4",
     "babel-plugin-react-intl": "3.0.1",
@@ -152,6 +152,7 @@
     "regenerator-runtime": "0.13.7",
     "resolve-url": "0.2.1",
     "sass-loader": "7.1.0",
+    "sinon": "9.2.2",
     "spawn-sync": "2.0.0",
     "spectron": "10.0.1",
     "style-loader": "0.23.1",
@@ -171,9 +172,11 @@
     "yarn-lockfile": "1.1.1"
   },
   "dependencies": {
-    "@cardano-foundation/ledgerjs-hw-app-cardano": "2.1.0",
+    "@cardano-foundation/ledgerjs-hw-app-cardano": "2.2.0",
+    "@iohk-jormungandr/wallet-js": "0.5.0-pre7",
     "aes-js": "3.1.2",
-    "bignumber.js": "5.0.0",
+    "bech32": "2.0.0",
+    "bignumber.js": "9.0.1",
     "bip39": "2.3.0",
     "blake2b": "2.1.3",
     "blakejs": "1.1.0",
@@ -181,7 +184,7 @@
     "bs58": "4.0.1",
     "cardano-crypto.js": "5.3.6-rc.6",
     "cardano-js": "0.4.5",
-    "cardano-launcher": "0.20201014.0",
+    "cardano-launcher": "0.20210215.0",
     "cbor": "5.0.2",
     "check-disk-space": "2.1.0",
     "chroma-js": "2.1.0",
@@ -200,6 +203,7 @@
     "history": "4.10.1",
     "humanize-duration": "3.23.1",
     "inquirer": "7.3.3",
+    "json-bigint": "1.0.0",
     "lodash": "4.17.20",
     "lodash-es": "4.17.15",
     "mime-types": "2.1.27",
@@ -227,7 +231,7 @@
     "react-intl": "2.7.2",
     "react-lottie": "1.2.3",
     "react-markdown": "4.3.1",
-    "react-polymorph": "0.9.7-rc.6",
+    "react-polymorph": "0.9.8-rc.11",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-svg-inline": "2.1.1",
@@ -243,7 +247,7 @@
     "shasum": "1.0.2",
     "source-map-support": "0.5.19",
     "spectron-fake-dialog": "0.0.1",
-    "trezor-connect": "8.1.19-extended",
+    "trezor-connect": "8.1.22-extended",
     "unorm": "1.6.0",
     "validator": "13.1.17"
   },
