--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "electron-log-daedalus": "2.2.21",
     "electron-store": "5.1.1",
     "es6-error": "4.1.1",
+    "find-process": "1.4.4",
     "form-data": "3.0.0",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
@@ -218,7 +219,6 @@
     "pbkdf2": "3.0.17",
     "pdfkit": "0.8.3",
     "prop-types": "15.7.2",
-    "ps-list": "7.2.0",
     "qr-image": "3.2.0",
     "qrcode.react": "1.0.0",
     "rc-slider": "9.5.1",
