--- a/package.json
+++ b/package.json
@@ -196,6 +196,7 @@
     "electron-log-daedalus": "2.2.21",
     "electron-store": "5.1.1",
     "es6-error": "4.1.1",
+    "fireworks-js": "^1.0.4",
     "form-data": "3.0.0",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
