[DDW-609] Content and effect progress

--- a/package.json
+++ b/package.json
@@ -196,8 +196,8 @@
     "electron-log-daedalus": "2.2.21",
     "electron-store": "5.1.1",
     "es6-error": "4.1.1",
-    "fireworks-js": "^1.0.4",
     "find-process": "1.4.4",
+    "fireworks-js": "^1.0.4",
     "form-data": "3.0.0",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
@@ -226,6 +226,7 @@
     "rc-slider": "9.5.1",
     "react": "16.13.1",
     "react-animate-height": "2.0.23",
+    "react-confetti": "^6.0.1",
     "react-copy-to-clipboard": "5.0.2",
     "react-custom-scrollbars": "4.2.1",
     "react-datetime": "3.0.4",
@@ -237,6 +238,7 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-svg-inline": "2.1.1",
+    "react-use": "^17.2.1",
     "react-virtualized": "9.22.2",
     "recharts": "1.8.5",
     "rimraf": "3.0.2",
