--- a/package.json
+++ b/package.json
@@ -197,7 +197,7 @@
     "electron-store": "5.1.1",
     "es6-error": "4.1.1",
     "find-process": "1.4.4",
-    "fireworks-js": "^1.0.4",
+    "fireworks-js": "1.0.4",
     "form-data": "3.0.0",
     "fs-extra": "9.0.1",
     "glob": "7.1.6",
@@ -237,7 +237,6 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-svg-inline": "2.1.1",
-    "react-use": "^17.2.1",
     "react-virtualized": "9.22.2",
     "recharts": "1.8.5",
     "rimraf": "3.0.2",
